[tool.poetry]
name = "llm-tool-sandbox"
version = "0.1.0"
description = ""
authors = ["davemaguire <32852526+davemaguire@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "llm_tool_sandbox"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.4"
streamlit = "^1.21.0"
langchain = "^0.0.134"
ipykernel = "^6.22.0"
chromadb = "^0.3.21"
tiktoken = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
